grabbable preview, fix decimal inputs on mobile

--- a/css/demo.css
+++ b/css/demo.css
@@ -1,7 +1,7 @@
 CopeTubeDemo {
 	display: grid;
-	grid-auto-columns: max-content;
-	grid-gap: 10px;
+	grid-auto-columns: min-content;
+	grid-gap: 15px;
 	grid-template-areas: "a b";
 }
 #template, #visualization, #controls { column-span: none; vertical-align: top; }
@@ -22,9 +22,9 @@ input:focus, button:focus {
 	outline: groove;
 	border-color: lightblue;
 }
-input[type=text] { width: 6em; }
+input[type=text] { width: 5em; }
 input[type=number] {
-	width: 3em;
+	width: 2em;
 	-moz-appearance:textfield;
 }
 input[type=number]::-webkit-inner-spin-button,
@@ -32,11 +32,29 @@ input[type=number]::-webkit-outer-spin-button {
 	-webkit-appearance: none;
 	margin: 0;
 }
-/*
-input[type="range"] {
-  writing-mode: bt-lr;
-  -webkit-appearance: slider-vertical;
-  transform: rotate(-45deg);
-  transform-origin: 0px 0px;
+
+input[type=range]:focus {
+	outline: none;
+	cursor: grab;
 }
-*/
+
+#tilter {
+    transform-origin: left top;
+	transform: rotate(calc(var(--miter-degs) * -1));
+	/* ugh, not the same as <svg>'s rotate()!
+	 * https://drafts.csswg.org/css-transforms-2/#individual-transforms
+	 * https://chrisruppel.com/blog/css-transforms-level2-translate-scale-rotate/ */
+	position: relative;
+	top: -90px;
+	left: 8px;
+	overflow: hidden;
+}
+#tilter input {
+	width: 75px;
+	height: 80px;
+	cursor: grab;
+}
+
+#tilter input[type=range] {
+	-webkit-appearance: none;
+}
